[package]
name = "omi-integration"
version = "0.1.0"
edition = "2021"
description = "Omi Integration API client (OpenAPI-generated)"
license = "MIT"
repository = "https://github.com/BasedHardware/omi"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
